--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:42:06Z</date>
+						<date>2018-10-08T15:47:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -492,11 +492,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/hipQUugyRCN
-								fiNwaWCShA==
+								j6pr3mwzn3od
+								+1L2WiGtjA==
 								</data>
 								<key>Size</key>
-								<integer>200885</integer>
+								<integer>200047</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -522,11 +522,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5F+hu2eQFYDv
-								M9cO0fPPrQ==
+								13w07W7VB2vN
+								K0AU6twLcg==
 								</data>
 								<key>Size</key>
-								<integer>165207</integer>
+								<integer>163388</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
