--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-05T14:42:06Z</date>
+						<date>2018-10-08T15:47:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -414,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n/N55XvDCNV/
-								5mkpobn2tQ==
+								pyysAYrY3oml
+								Ppqz/hMfEQ==
 								</data>
 								<key>Size</key>
-								<integer>192100</integer>
+								<integer>191262</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -434,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MCE2aj/oyktf
-								e7kKrKuvtg==
+								/NnPsEDM9WEp
+								fWQN7TYDIQ==
 								</data>
 								<key>Size</key>
-								<integer>128375</integer>
+								<integer>127748</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
