added VF talk description
added VF talk description

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -3276,7 +3276,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:47:34Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3695,11 +3695,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i7DrpdbjqCfl
-								70QWlyIVMA==
+								4QT36F3i2KJB
+								kOMO6RXW/w==
 								</data>
 								<key>Size</key>
-								<integer>147312</integer>
+								<integer>147619</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5512,7 +5512,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:49:03Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5991,21 +5991,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MIm9yBhc+aMP
-								GouzMkza2A==
+								UVxtD2tkK8i0
+								YRAeeFJ5DA==
 								</data>
 								<key>Size</key>
-								<integer>218387</integer>
+								<integer>218555</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								68KMucmRxAqC
-								mmnN5AGHCQ==
+								tS0eAxfI8+89
+								Foxy2/hfUg==
 								</data>
 								<key>Size</key>
-								<integer>31795</integer>
+								<integer>31977</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -6021,11 +6021,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G77EQ0ZKpgaS
-								K1heUrP4cg==
+								15Dfc7AeMKBa
+								K3foqyZToQ==
 								</data>
 								<key>Size</key>
-								<integer>182581</integer>
+								<integer>184415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9672,7 +9672,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:49:03Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9721,11 +9721,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+5tMJNKjx/mB
-								w226/fRRgA==
+								iajEs8Vgwz1l
+								apvdy9Ciqg==
 								</data>
 								<key>Size</key>
-								<integer>4544</integer>
+								<integer>4448</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9774,7 +9774,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:10:16Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10813,11 +10813,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5yG48o2vcNf
-								6t1Vhwhq8Q==
+								6gwdfJ+57wLU
+								jrpgPtIeGA==
 								</data>
 								<key>Size</key>
-								<integer>4067</integer>
+								<integer>3401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10921,8 +10921,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC12fjB
-				ph6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC1+VAd
+				ccmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -10932,7 +10932,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC12fjBqL2A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC1+VAdbRGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
