--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:49:03Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -512,21 +512,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MIm9yBhc+aMP
-								GouzMkza2A==
+								UVxtD2tkK8i0
+								YRAeeFJ5DA==
 								</data>
 								<key>Size</key>
-								<integer>218387</integer>
+								<integer>218555</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								68KMucmRxAqC
-								mmnN5AGHCQ==
+								tS0eAxfI8+89
+								Foxy2/hfUg==
 								</data>
 								<key>Size</key>
-								<integer>31795</integer>
+								<integer>31977</integer>
 							</dict>
 							<key>files/stacks_page_page48.php</key>
 							<dict>
@@ -542,11 +542,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G77EQ0ZKpgaS
-								K1heUrP4cg==
+								15Dfc7AeMKBa
+								K3foqyZToQ==
 								</data>
 								<key>Size</key>
-								<integer>182581</integer>
+								<integer>184415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
