--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-08T15:47:34Z</date>
+						<date>2018-10-08T20:16:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -452,11 +452,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i7DrpdbjqCfl
-								70QWlyIVMA==
+								4QT36F3i2KJB
+								kOMO6RXW/w==
 								</data>
 								<key>Size</key>
-								<integer>147312</integer>
+								<integer>147619</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
